--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/styles.css">
     <title>React</title>
   </head>
   <body>
